--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,45 +1,7 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/discovery_country
-    username: postgres
-    password:
-
-
-  jpa:
-    database: postgresql
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-
-  mail:
-    host: smtp.gmail.com
-    username:
-    password:
-    default-encoding: UTF-8
-    protocol: smtp
-    port: 587
-    properties:
-      mail:
-        smtp:
-          ssl:
-            trust: "*"
-          auth: true
-          starttls:
-            enable: true
-
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            clientId:
-            clientSecret:
-            scope:
-              - openid
-              - profile
-              - email
-
-
-
-#  liquibase:
-#    change-log: liquibase/change-log-master.yaml
+  profiles:
+    include:
+      - database
+      - storage
+      - mail
+      - security
